# Lite-Task-Framework-w-Claude-hooks

./: .coverage  .diff_embeddings.meta.json  .diff_embeddings.tvim  .fullrepo_embeddings.meta.json  .fullrepo_embeddings.tvim  .gitignore  .mcp.json  .tasks_embeddings.meta.json  .tasks_embeddings.tvim  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  WIKI_KEYWORD_SCORING.md  WIKI_LIFE_OS.md  WIKI_QUALITY.md  dev-workflow.md  mcp_server.py  pyproject.toml  serve_pipeline.py
.claude/: settings.json
.github/: copilot-instructions.md
concept_store/: concepts.json  diff.py  diff_hook.py  extractor.py  store.py
docs/: ARCHITECTURE.md  claude_hooks_memory_graph.json  dev-workflow.md  feedback_loop.md  hook_events.md  hook_server.md  jinja2.md  new_repo_onboarding.md  pluggable_nodes.md  setup.md  skills.md  task_framework.md  task_ui.md  testing.md
hooks/: client.py  client.sh  dispatcher.py  gates.py  hooks_config.py  memory_loader_lc.py  paths.py  pipeline_client.py  pre_tool_use_lc.py  refresh_tool_hints.py  server.py  server_memory.py  sqlite_log_handler.py  stop_hook_lc.py  tool_usage_logger_lc.py  utils.py
langchain_learning/: __init__.py  config.py  domain_classifier.py  gate_pipeline.py  hook_runnable.py  logger.py  memory_loader_e2e_test_runnable.py  memory_loader_runnable.py  memory_retriever.py  pipeline.py  prompt_hook_runnable.py  retrievers.py  session_graph.py  session_state.py  subagent.py  task_graph.py  tool_hints_retriever.py
launchd/: com.claude-hooks-pipeline.plist.template  com.debaditya.claude-hooks-pipeline.plist
review_templates/: correctness.md  past-mistakes.md  past_mistakes.md
scripts/: build_code_embeddings.py  build_code_graph.py  build_diff_embeddings.py  build_fullrepo_embeddings.py  build_memories_embeddings.py  compare_rag_indexes.py  deploy.sh  export_memory_graph.py  extract_concepts.py  graph_topology.py  init_db.py  install_server.sh  populate_related.py  query_code_embeddings.py  refresh_tool_hints.py  task_activate.py
skills/: pause
src/: config.py  dispatcher.py  log_reader.py  logger.py
task_templates/: README.md  bug.md  epic.md  feature.md  feedback.md  misc.md  research.md
tests/: conftest.py  diff_runs.py  replay_baseline.json  replay_harness.py  (+55 more)
(+260 files in other folders)
