[project]
name = "claude-hooks"
version = "0.1.0"
description = "Claude Code hooks and LangChain pipeline for memory loading and session tracking"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-classic>=0.3.0",
    "langgraph>=0.2.0",
    "rank-bm25>=0.2.2",
    "anthropic>=0.104.1",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.136.3",
    "langserve[all]>=0.3.3",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "llama-index-embeddings-ollama>=0.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
